# lyx

./: README.md
ProtocolTest/: meson.build
ProtocolTest/src/: meson.build
ProtocolTest/src/data_link/: generator.vala  iic.vala  jtag.vala  main.vala  ncsi.vala  uart.vala
ProtocolTest/src/interface/: interface.vala
ProtocolTest/src/io/: mock.vala  physical.vala
ProtocolTest/src/physical/: clock.vala  level.vala
ProtocolTest/test/: meson.build  test.vala
