sources = files(['data_link/main.vala','data_link/iic.vala','data_link/uart.vala','data_link/ncsi.vala',
                'data_link/jtag.vala','data_link/generator.vala','physical/level.vala','io/mock.vala','io/physical.vala','interface/interface.vala'])
lib = executable('test1', sources,		
            dependencies : [depends],
            install: true)
